# ai-news-publisher

./: .gitignore  CONTRIBUTING.md  LICENSE  PR_ORDER.md  README.md  pyproject.toml
frontend/: README.md  package.json
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/app/api/events/: route.ts
frontend/app/api/events/[id]/: route.ts
frontend/app/events/[id]/: page.tsx
frontend/components/: EventCard.tsx  Filters.tsx
frontend/lib/: api.ts  events-data.ts
frontend/types/: event.ts
src/ai_news_publisher/: __init__.py  cli.py  config.py  main.py  models.py  monitoring.py  pipeline.py  seo.py
src/ai_news_publisher/api/: app.py
src/ai_news_publisher/db/: schema.sql
src/ai_news_publisher/domain/: models.py
src/ai_news_publisher/infrastructure/: email.py  embeddings.py  repository.py  rss.py
src/ai_news_publisher/prompts/: templates.py
src/ai_news_publisher/services/: digest.py  email_digest.py  ingestion.py  localization.py  publishing.py  summarization.py
tests/: test_api.py  test_cli.py  test_daily_digest.py  test_ingestion_pipeline.py  test_monitoring.py  test_pipeline.py  test_services_and_seo.py
