[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-news-publisher"
version = "0.1.0"
description = "Minimal pipeline to normalize AI news items and generate a markdown digest"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "ai-news-publisher contributors" }]
dependencies = []

[project.scripts]
ai-news-publisher = "ai_news_publisher.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
